# AGENTx402

./: .env.example  .gitignore  ARCHITECTURE.md  COMMANDS.md  Makefile  NEXT_STEPS.md  README.md  README_GRPC.md  SCAFFOLDING_COMPLETE.md  alembic.ini  docker-compose.yml  pyproject.toml  run_test.sh  test_grpc.py  test_grpc_server.py  test_onboarding.py  test_setup.md
.claude/: conventions.md  instructions.md  mcp.json
docker/: Dockerfile.backend  Dockerfile.telegram
docs/: .doc-counters.json  .gitkeep  PA001-20251003041316--agent-x402-flow-documentation.md  PROJECT001-20251003040532--agent-x402-documentation.md  PROJECT002-20251003040754--onboarding-flow-agent-x402.md  PROJECT003-20251003040916--mandate-creation-flow-agent-x402.md  PROJECT004-20251003041042--portfolio-management-flow-agent-x402.md  PROJECT005-20251003041211--bot-discovery-quick-invest-flow-agent-x402.md  README.md  deep-linking-strategy.md  flow-bot-discovery.md  flow-mandate-creation.md  flow-onboarding.md  flow-portfolio-management.md
migrations/: env.py
migrations/versions/: 576c2f2821ce_create_mandates_and_agents_tables.py
proto/: buf.gen.yaml
proto/api/v1/: telegram.proto
src/backend/: grpc_server.py  init_db.py  main.py
src/backend/core/: config.py  database.py  dependencies.py
src/backend/features/users/: __init__.py
src/backend/features/users/application/: __init__.py
src/backend/features/users/domain/: __init__.py
src/backend/features/users/infrastructure/: __init__.py
src/backend/shared/application/interfaces/: __init__.py  repository.py  unit_of_work.py
src/backend/shared/domain/base/: __init__.py  aggregate_root.py  domain_event.py  entity.py  value_object.py
src/backend/shared/domain/exceptions/: __init__.py  base_exceptions.py
src/backend/shared/infrastructure/: __init__.py  database.py
src/telegram_bot/: main.py
src/telegram_bot/core/: config.py
src/telegram_bot/handlers/: __init__.py  callbacks.py  commands.py  messages.py
src/telegram_bot/handlers/flows/: __init__.py  wallet_flow.py
src/telegram_bot/services/: __init__.py  backend_client.py  claude_service.py  grpc_client.py
tests/: conftest.py
tests/integration/backend/: test_api_routes.py
tests/unit/backend/: test_domain_entities.py  test_value_objects.py
tests/unit/backend/shared/: __init__.py  test_base_mapper.py  test_event_dispatcher.py  test_unit_of_work.py
web/: .env.example  README.md  next.config.js  package-lock.json  package.json
web/docs/: .doc-counters.json  TP001-20251003041422--deep-linking-strategy-telegram-bot-web-app-integra.md
web/src/app/: layout.tsx  page.tsx
web/src/components/: providers.tsx
web/src/server/api/: root.ts  trpc.ts
(+67 files in other folders)
