[project]
name = "telegram-402"
version = "0.1.0"
description = "AI-powered trading bot platform with Telegram interface and HTTP 402 mandate system"
requires-python = ">=3.12"
dependencies = [
    # Web frameworks
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    # Telegram
    "python-telegram-bot>=20.7",
    # AI/LLM
    "anthropic>=0.25.0",
    # Blockchain
    "web3>=6.15.0",
    "eth-account>=0.11.0",
    # Database
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    # Cache
    "redis>=5.0.1",
    # HTTP
    "httpx>=0.26.0",
    # gRPC
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pytest>=8.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",

    # Code quality
    "black>=24.1.1",
    "ruff>=0.1.15",
    "mypy>=1.8.0",

    # Development
    "ipython>=8.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v"

[tool.uv]
dev-dependencies = []

[tool.hatch.envs.default.scripts]
# Development commands
test = "pytest"
test-cov = "pytest --cov=src --cov-report=term-missing --cov-report=html"
lint = "ruff check src/ tests/"
format = "black src/ tests/"
type-check = "mypy src/"

# Database commands
db-migrate = "alembic upgrade head"
db-rollback = "alembic downgrade -1"
db-create = "alembic revision --autogenerate -m {args}"

# Docker commands
docker-up = "docker-compose up --build"
docker-down = "docker-compose down"

# Combined checks
check = ["format", "lint", "type-check", "test"]

# Cleanup
clean = [
    "find . -type d -name __pycache__ -exec rm -rf {} + 2>/dev/null || true",
    "find . -type f -name '*.pyc' -delete",
    "rm -rf .pytest_cache .coverage htmlcov .mypy_cache .ruff_cache",
]
